fix wrong font color in session dialog markdown content

--- a/app/globals.css
+++ b/app/globals.css
@@ -46,3 +46,16 @@ h4 {
   @apply text-4-6;
   font-size: 16px;
 }
+
+.prose :where(h2):not(:where([class~="not-prose"],[class~="not-prose"] *)) {
+  color: white;
+}
+
+.prose :where(a):not(:where([class~="not-prose"],[class~="not-prose"] *)) {
+  color: white;
+  transition: 100ms;
+}
+
+.prose :where(a):not(:where([class~="not-prose"],[class~="not-prose"] *)):hover {
+  color: #cecece;
+}
